UdtSocket class implementation nad test programs

--- a/udt/project.json
+++ b/udt/project.json
@@ -3,7 +3,8 @@
   "buildOptions": {
     "debugType": "portable",
     "emitEntryPoint": false,
-    "outputName": "udt"
+    "outputName": "udt",
+    "allowUnsafe": true
   },
   "dependencies": {},
   "frameworks": {
